--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'EVENT_TOKEN', eventToken
+    }
     defaultConfig {
         applicationId "com.example.events"
         minSdkVersion 22
@@ -33,6 +36,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.support:recyclerview-v7:29.0.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'org.parceler:parceler:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     testImplementation 'junit:junit:4.12'
